# argi_scan

./: Cargo.toml  README.md
src/: algo_bigdecimal_btm.rs  config.rs  error.rs  http_rates.rs  lib.rs  main.rs
