[package]
name = "arbi_scan"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = [ "blocking", "json" ] }
serde = { version = "1.0.203", features = [ "derive" ] }
anyhow = "1.0.86"
thiserror = "1.0.61"
clap = { version = "4.5.7", features = ["derive"] }
clap_derive = "4.5.5"

rust_decimal = { version = "1.35.0", features = ["serde", "maths"] }
bigdecimal = "0.4.5"
num-bigint = "0.4.5"

